[project]
name = "ped"
version = "0.1.0"
description = "Phishing Email Detector with Adversarial Robustness Evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "click==8.3.1",
    "comm==0.2.3",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "filelock==3.20.0",
    "fonttools==4.61.0",
    "fsspec==2025.12.0",
    "inexactsearch==1.0.2",
    "ipykernel==7.1.0",
    "ipython==8.37.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.2",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pyspellchecker==0.8.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "regex==2025.11.3",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "silpa-common==0.3",
    "six==1.17.0",
    "soundex==1.1.3",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "wcwidth==0.2.14",
    "xgboost==3.1.2",
]
